# Daybook

./: .gitignore  README.md  docker-compose.yml
daybook-be/: .env.dist  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
daybook-be/src/: config.py  di.py
daybook-be/src/api/: app.py  dependencies.py
daybook-be/src/api/routes/: auth.py  callbacks.py  dayplanner_service_account.json
daybook-be/src/client/: base.py  google_oauth.py
daybook-be/src/daybook_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
daybook-be/src/models/: oauth.py  user.py
daybook-be/src/repository/: user.py
daybook-be/tests/unit/api/: test_app.py
daybook-be/tests/unit/api/routes/: test_user.py
daybook-fe/: package-lock.json  package.json
daybook-fe/public/: index.html
daybook-fe/src/: index.tsx
daybook-fe/src/App/: App.css  App.tsx
daybook-fe/src/components/CalendarOverview/: Planner.tsx
daybook-fe/src/components/Logout/: Logout.tsx
daybook-fe/src/components/NavBar/: NavBar.css  NavBar.tsx
daybook-fe/src/components/NavigationDrawer/: NavigationDrawer.css  NavigationDrawer.tsx
daybook-fe/src/components/Planner/: Planner.css  Planner.tsx
daybook-fe/src/components/PrivateRoute/: PrivateRoute.tsx
daybook-fe/src/components/PublicRoute/: PublicRoute.tsx
daybook-fe/src/redux/: store.ts
daybook-fe/src/redux/slices/: drawer.ts  theme.ts
daybook-fe/src/utils/: cookie.js  login.js  sample.js
dockerfiles/node/: Dockerfile
dockerfiles/python/: Dockerfile
